# Connect4

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  commands.txt  deploy_backend.sh  heroku.yml
backend/: Cargo.toml  Rocket.toml  deploy_commands
backend/src/: events.rs  game_model.rs  game_room.rs  games.rs  main.rs  mongodb_repo.rs  structs.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  deploy.sh  deploy_frontend.sh  index.html  style.css
frontend/src/: api_handler.rs  hooks.rs  main.rs  routes.rs
frontend/src/components/: mod.rs  style.css
frontend/src/constants/: mod.rs
frontend/src/pages/: mod.rs
frontend/src/pages/game_room/: mod.rs  style.css
frontend/src/pages/game_room/board/: mod.rs  style.css
frontend/src/pages/home/: mod.rs  style.css
frontend/src/pages/lobby/: mod.rs  style.css
frontend/src/pages/login/: mod.rs  style.css
