[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = {version ="0.5.0", features= ["json"]}
serde = "1.0.140"
serde_json="1.0.82"
dotenv = "0.15.0"
mongodb = {version="2.2.0"}
uuid={ version = "1.1.2", features = ["v4","js"] }
common = {path= "../common"}